test/parsing/fail/parsing_error_empty_method_body.j
class A {
  Void main() { return 1; }
}

class Dummy {
  Void asd() {
    Int i;
    Int j;
  }
}
